# tellingme-python-server

./: .dockerignore  .gitignore  .gitmessage.txt  Dockerfile  README.md  pyproject.toml  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml
scripts/: deploy-prod.sh  start_app.sh
src/: celery_settings.py  celery_worker.py  main.py
src/app/v2/answers/: router.py
src/app/v2/answers/dtos/: answer_dto.py
src/app/v2/answers/models/: answer.py
src/app/v2/answers/querys/: answer_query.py
src/app/v2/answers/services/: answer_service.py
src/app/v2/badges/: router.py
src/app/v2/badges/dtos/: badge_dto.py  response.py
src/app/v2/badges/models/: badge.py
src/app/v2/badges/querys/: badge_query.py
src/app/v2/badges/services/: badge_service.py
src/app/v2/cheese_managers/: router.py
src/app/v2/cheese_managers/dtos/: cheese_dto.py
src/app/v2/cheese_managers/models/: cheese_manager.py  cheese_status.py
src/app/v2/cheese_managers/services/: cheese_service.py
src/app/v2/colors/: router.py
src/app/v2/colors/dtos/: color_dto.py  response.py
src/app/v2/colors/models/: color.py
src/app/v2/colors/querys/: color_query.py
src/app/v2/colors/services/: color_service.py
src/app/v2/emotions/: router.py
src/app/v2/emotions/dtos/: response.py
src/app/v2/emotions/models/: emotion.py
src/app/v2/emotions/querys/: emotion_query.py
src/app/v2/emotions/services/: emotion_service.py
src/app/v2/items/dtos/: item_dto.py
src/app/v2/items/models/: item.py
src/app/v2/missions/: router.py
src/app/v2/mobiles/: router.py
src/app/v2/payments/: router.py
src/app/v2/purchases/: router.py
src/app/v2/questions/: router.py
src/app/v2/teller_cards/: router.py
src/common/: post_construct.py  query_executor.py
src/common/base_models/base_dtos/: base_response.py
src/common/base_models/custom_fields/: hex_binary_field.py
src/common/exceptions/: custom_exception.py  error_code.py
src/common/handlers/: exception_handler.py  router_handler.py
src/common/tasks/: mission_task.py  renew_subscription_task.py
src/common/utils/: get_user_id.py  query_executor.py  query_formatter.py  scheduler.py
src/core/configs/: __init__.py  base_settings.py  celery_settings.py
src/core/database/: database_settings.py
src/core/tasks/: scheduler.py
(+42 files in other folders)
