[tool.poetry]
name = "tellingme-python-server"
version = "0.1.0"
description = ""
authors = ["Dae-Jeong <v4chelsea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.35"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
greenlet = "^3.1.1"
sqlalchemy-utils = "^0.41.2"
python-multipart = "^0.0.12"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.11.2"
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
