[tool.poetry]
name = "tellingme-python-server"
version = "0.1.0"
description = ""
authors = ["Dae-Jeong <v4chelsea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
gunicorn = "^23.0.0"
greenlet = "^3.1.1"
python-multipart = "^0.0.12"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
tortoise-orm = {extras = ["asyncmy"], version = "^0.21.6"}
cryptography = "^43.0.1"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.11.2"
black = "^24.8.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
mypy-extensions = "^1.0.0"

[tool.mypy]
files = "src"  # 타입 체크할 파일 경로
disallow_untyped_calls = true  # 타입이 없는 함수 호출 금지
disallow_untyped_defs = true   # 타입이 없는 함수 정의 금지
ignore_missing_imports = true # 누락된 import 무시

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
